--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 #root {
     max-width: 1280px;
+    max-height: 940px;
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
 }
 body, html, #root {
+    width: 100%;
     min-height: calc(100vh - 70px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 footer {
