--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,43 @@
-#root {
-    max-width: 1280px;
-    max-height: 940px;
+body {
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
-}
-body, html, #root {
     width: 100%;
-    min-height: calc(100vh - 70px);
+    min-height: calc(100vh);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 
 }
 footer {
     margin-top: auto;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: 'Anton SC', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "azo-mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+}
+
+* {
+}
+
+html, body {
+    background-color: #FAF7EB;
+
+}
+
+.flechas{
+    width: 10%;
+}
+textarea:focus, input:focus{
+    outline: none;
 }
