--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #FAF7EB;
+    background-color: #070914;
     height: 100lvh;
 }
 
